--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		 <link rel="amphtml" href="https://gacoerkali.xyz/amp/lotus88.html">
          <title>Lotus88 🚀 Situs Permainan Link Slot Gacor Gampang Maxwin Terbaru</title>
          <meta name="description" content="Lotus88 adalah salah satu agen permainan slot gacor online terpercaya dengan tingkat maxwin tertinggi mencapai 95% pasti menang setiap hari." >
-	     <meta name="keywords" content="Bingo88, daftar Bingo88, link Bingo88, situs Bingo88">
+	     <meta name="keywords" content="Lotus88, daftar Lotus88, link Lotus88, situs Lotus88">
 		 <meta content="id_ID" property="og:locale">
           <meta content="website" property="og:type">
       <meta content="https://i.imgur.com/4tSGQwy.jpg" property="og:image" />
